--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/cloudflare": "^11.2.0",
     "@astrojs/mdx": "^3.1.4",
     "@astrojs/react": "^3.6.2",
     "@astrojs/rss": "^4.0.7",
@@ -49,7 +50,7 @@
     "@types/react": "18.3.4",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.9.1",
+ 
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
