--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,7 +1,8 @@
 {
   "site": {
-    "title": "Exceptionnelle villa en front de mer à Ouistreham",
-    "base_url": "https://location-maison-mer.fr",
+    "villa_title": "Villa les Tamaris",
+    "title": "Location de maison de vacances en front de mer à Ouistreham.",
+    "base_url": "https://www.location-maison-mer.fr",
     "base_path": "/",
     "trailing_slash": false,
     "favicon": "/images/favicon32.png",
@@ -26,7 +27,7 @@
 
   "params": {
     "contact_form_action": "#",
-    "copyright": "<i>Jean-Marc LEGLISE - <a href='https://astro.build' target='_blank' rel='noopener noreferrer'>  with Astro.js & Astroplate</a></i>"
+    "copyright": "<i><a href='https://astro.build' target='_blank' rel='noopener noreferrer'>  with Astro.js & Astroplate</a></i>"
   },
 
   "book_now_button": {
@@ -40,10 +41,9 @@
     "shortname": "themefisher-template",
     "settings": {}
   },
-
   "metadata": {
     "meta_author": "Jean-Marc LEGLISE",
     "meta_image": "/images/villa_tamaris_ouistreham_vueFront.jpg",
-    "meta_description": "Grande location de vacance avec vue mer à Ouistreham, 2h de Paris. 5 chambres, 10 personnes. La villa Tamaris est idéalement située en front de mer et bénéficie de tout le confort et l&#39;équipement d&#39;une véritable habitation."
+    "meta_description": "Superbe villa en front de mer à Ouistreham. 5 chambres, 10 personnes. à 2h de Paris. Tout le confort et l&#39;équipement d&#39;une véritable habitation."
   }
 }
