--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "sass": "^1.77.8",
-    "sharp": "0.33.5",
+    "sharp": "^0.33.5",
     "tailwind-bootstrap-grid": "^5.1.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
