--- a/src/config/config.json
+++ b/src/config/config.json
@@ -5,7 +5,8 @@
     "base_url": "https://www.location-maison-mer.fr",
     "base_path": "/",
     "trailing_slash": true,
-    "favicon": "/images/favicon32.png",
+    "favicon32": "/images/favicon32.png",
+    "favicon96": "/images/favicon96.png",    
     "logo": "/images/camelia_cabochon_97.png",
     "logo_width": "90",
     "logo_height": "90",
